# gamma-desk

./: .gitignore  .pylintrc  CHANGES.rst  COMPATIBILITY.md  DEVELOP.md  NOTICE  README.md  pyproject.toml  setup.py
bat/: build.bat  build_pip_wheel.bat  build_wheel.bat  dos.bat  start.bat  start_all_py.bat  start_gui_as_child.bat  start_py.bat  start_py310.bat  start_py311.bat  start_py312.bat  start_py313.bat  start_py314.bat  start_py36.bat  start_py38.bat  start_py39.bat  start_test.bat  upload_real.bat
benchy/: __init__.py  __main__.py  console.py
benchy/config/: defaults.json
benchy/core/: conf.py  gui_proxy.py  shellmod.py  stdinout.py
benchy/dialogs/: about.py  base.py  colormap.py  editpaths.py  filedialog.py  main.py
benchy/doc/: generate_doc.bat
benchy/doc/source/: conf.py  index.rst
benchy/ezdock/: boxes.py  docks.py  dockwidgets.py
benchy/gcore/: guiapp.py  qgc.py  threadcom.py
benchy/graphics/: grid.py  plotview.py  point.py  rulers.py
benchy/live/: __main__.py  __version__.py  interactive.py
benchy/matplotbe/: __init__.py
benchy/panels/: __init__.py  base.py  panels.py  window.py
benchy/panels/console/: __init__.py  consolepanel.py  consoleproxy.py
benchy/panels/dialog/: __init__.py
benchy/panels/imgview/: blueprint.py  dimensions.py  fasthist.py  imgdata.py  numba_func.py  profile.py  proxy.py  quantiles.py
benchy/panels/levels/: __init__.py
benchy/rectable/: utils.py
benchy/utils/: __init__.py  ansi_code_processor.py  imconvert.py  shared.py  ticks.py  z_order.py
benchy/widgets/: grid.py
doc/: use-uv.md
doc/html/: benchy.html  benchy.version.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
doc/html/_sources/: benchy.rst.txt  benchy.version.rst.txt  index.rst.txt  modules.rst.txt
doc/sphinx/: copy_to_html.bat  generate_doc.bat
doc/sphinx/source/: conf.py  index.rst  release_notes.rst  tutorial.console.rst  tutorial.livescript.rst  tutorial.plot.rst  tutorial.processes.rst  user_api.rst
gdesk/: __init__.py  __main__.py  console.py  version.py
gdesk/config/: defaults.json  defaults_darwin.json  defaults_linux.json  defaults_unix.json
gdesk/core/: comm.py  comm_nonduplex.py  conf.py  gui_proxy.py  history.py  interpreter.py  shellmod.py  stdinout.py  tasks.py  watcher.py
gdesk/dialogs/: about.py  base.py  colormap.py  editpaths.py  filterlist.py  formlayout.py  main.py  textbrowser.py
gdesk/dicttree/: node.py  widgets.py
gdesk/ezdock/: boxes.py  dockwidgets.py  ezdock.py  laystruct.py  overlay.py
gdesk/gcore/: guiapp.py  qgc.py  threadcom.py  utils.py
gdesk/graphics/: functions.py  items.py  plotview.py  rulers.py  view.py
gdesk/install/: freedesktop.py
gdesk/live/: __init__.py  completer.py  console.py  manage.py
gdesk/matplotbe/: __init__.py
gdesk/panels/: base.py  panels.py  window.py
gdesk/panels/cmdhist/: __init__.py  panel.py  proxy.py
gdesk/panels/console/: consolepanel.py  consoleproxy.py
gdesk/panels/dialog/: proxy.py
gdesk/panels/html/: __init__.py  panel.py  proxy.py
gdesk/panels/imgview/: __init__.py  blueprint.py  demosaic.py  dialogs.py  fasthist.py  imgdata.py  imgpaint.py  imgview.py  opencv.py  operation.py  profile.py  proxy.py  roi.py  spectrogram.py  statspanel.py  view_widgets.py
gdesk/panels/levels/: __init__.py  panel.py
gdesk/panels/matplot/: __init__.py  plotpanel.py  plotproxy.py
gdesk/panels/ndim/: __init__.py  hdf5.py  panel.py  proxy.py  widget.py
gdesk/panels/scriptwiz/: __init__.py  panel.py  proxy.py
gdesk/panels/scriptwiz/examples/example_01/: default.toml  form.json  template.py
gdesk/rectable/: __init__.py  base.py  htmlclip.py  styles.py  utils.py
gdesk/resources/: LICENSE.txt
gdesk/resources/install/freedesktop/: GammaDesk.desktop
gdesk/resources/ndim/: smiley.npz  space_cat.npz
gdesk/test/: __init__.py
gdesk/utils/: __init__.py  ansi_code_processor.py  funccom.py  imconvert.py  keypress.py  namedmutex.py  names.py  numba_func.py  qt.py  shared.py  syntax_light.py  ticks.py
gdesk/widgets/: grid.py  thumbs.py
test/: gdconf.json  launch.bat  make_venv.bat  start.bat  start_gdesk_as_child.py  update_venv.bat  venv.bat  venv_setup.bat
test/setup/: pip.ini  requirements.in  requirements.txt  test_gdesk.py
tests/live/: test_completer.py
