
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[tool.flit.module]
name = "gdesk"


[project]
name = "gamma-desk"
version = "1.6.4.dev0"
description = "A Python work environment with image viewers & plots"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Thomas Cools", email = "thomas.cools@telenet.be"},
]
classifiers = [
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pillow",
    "imageio",
    "imageio-ffmpeg",
    # Exclude MatPlotLib 3.5.2 because it crashes plotting on PySide6.
    "matplotlib != 3.5.2",
    "scipy",
    "qtpy",
    "psutil",
    "numba",
    "pyzmq",
    "pywinpty; sys_platform=='win32'",
    "legacy-cgi; python_version > '3.12'",
]


[project.optional-dependencies]
pyside2 = ["pyside2"]
pyside6 = ["pyside2"]
all = ["pyside6"]


[project.scripts]
gdesk = "gdesk.console:argexec"


[project.urls]
Source = "https://github.com/thocoo/gamma-desk"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
